--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.pdf filter=lfs diff=lfs merge=lfs -text
 *.fits filter=lfs diff=lfs merge=lfs -text
 *.zip filter=lfs diff=lfs merge=lfs -text
+*.7z filter=lfs diff=lfs merge=lfs -text
