Fixed all of the execution bugs with generating the tutorial. Folders have been renamed to align more with the philosophy of a lack of capital letters in module names. Sparrow is not a fan.

--- a/core/configuration_files/tutorial_configuration.ini
+++ b/core/configuration_files/tutorial_configuration.ini
@@ -1,4 +1,3 @@
-
 # The tutorial directory that is to be used or worked from for 
 # the execution of the tutorial. The tutorial is created inside
 # of this directory. If it does not exist, it will be created if
@@ -11,9 +10,7 @@ tutorial_creation_override = True
 # These are parameters for the creation, or generation, of the 
 # tutorial itself. 
 [generation]
-    # This is the number of fits file data files to be created. Note
-    # that unless their numbers are randomly generated, they will
-    # be the same file, same data.
+    # This is the number of fits file data files to be created.
     number_of_fits_files = 0
 
     # Fits files are created on execution of the tutorial. 
@@ -37,7 +34,7 @@ tutorial_creation_override = True
     data_shape = ,
 
     # Configuration files are also copied into the tutorial directory.
-    # Their destination can be overriden by this parameter. If the
+    # Their destination can be overridden by this parameter. If the
     # destination directory does not exist, it will be created if 
     # the creation flag is true.
     config_destination = ''
