--- a/core/configuration_files/reformat_configuration.ini
+++ b/core/configuration_files/reformat_configuration.ini
@@ -35,8 +35,8 @@ data_directory = ''
     voltage_pattern = ,
 
 
-# Working parameters for subframe calculation.
-[subframe]
+# Working parameters for data cube collapse calculation.
+[collapse]
     # The ranges if the initial and final chunks within each 
     # data cube that are averaged.
     start_chunks = ,
