--- a/.github/workflows/development_checks.yml
+++ b/.github/workflows/development_checks.yml
@@ -13,16 +13,15 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: '3.x'
-
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: Set up Python 3.x
       uses: actions/setup-python@v2
       with:
-        python-version: ${{ matrix.python-version }}
+        # Semantic version range syntax or exact version of a Python version
+        python-version: '3.x' 
+        
+        
     - name: Installing dependencies
       run: |
         python -m pip install --upgrade pip
