Feature: A functional SAPHIRA tutorial is completed and has been tested.

--- a/core/configuration_files/plotting_configuration.ini
+++ b/core/configuration_files/plotting_configuration.ini
@@ -5,7 +5,10 @@ data_directory= ''
 # These are configurable parameters to toggle the heat-map plot
 # produced by the heat-map plotting function.
 [heatmap]
-    
+    # This is the method of interpolation that can be used with 
+    # matplotlib. The checks are deferred to matplotlib for valid 
+    # input.
+    interpolation = 'none'
 
 # These are configurable parameters to the Gaussian histogram
 # plot. This plot creates and fits a Gaussian curve to a histogram 
