--- a/core/configuration_files/reformat_configuration.ini
+++ b/core/configuration_files/reformat_configuration.ini
@@ -37,10 +37,10 @@ data_directory = ''
 
 # Working parameters for data cube collapse calculation.
 [collapse]
-    # The ranges if the initial and final chunks within each 
-    # data cube that are averaged.
-    start_chunks = ,
-    end_chunks = ,
+    # The ranges of the initial and final frames within each 
+    # data cube that are averaged. These values are 0-indexed.
+    start_chunk = ,
+    end_chunk = ,
     # The averaging method to use for the range of chunks.
     average_method = ''
     # The frame exposure time, in seconds.
