--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,3 @@
 # These owners will be the default owners for everything in
 # the repo.
-*       psmd.iberutaru@gmail.com @mb2448
+*       psmd.iberutaru@gmail.com #@mb2448
