Bug/Feature: Added and fixed bugs and features relating to the 2020-06-02 meeting. (Cross branch changes.)

--- a/core/configuration_files/reformat_configuration.ini
+++ b/core/configuration_files/reformat_configuration.ini
@@ -37,6 +37,10 @@ data_directory = ''
 
 # Working parameters for data cube collapse calculation.
 [collapse]
+    # If this flag is True, this saves the collapsed frames into a 
+    # new directory; allowing for the creation of many collapsed 
+    # frames and more specific analysis.
+    subfolder = True
     # The ranges of the initial and final frames within each 
     # data cube that are averaged. These values are 0-indexed.
     start_chunk = ,
