--- a/smeargle_configuration.ini
+++ b/smeargle_configuration.ini
@@ -14,12 +14,17 @@ CONSOLE_LOG = True
 # be equal.
 FLOAT_EQUALITY_TOLERANCE = 1e-8
 
+# This is the character that will be used for splitting the 
+# renaming key and value pairs for the file names.
+RENAMING_DELIMITER = ';'
+
 # If mask keys should be allowed to use letters in their 
 # identification strings.
 MASK_LETTER_HASH = False
 
 # The default names of all of the subdirectories with regards to 
 # any and all data processing.
+COLLPASED_SUBDIR = 'SMEARGLE_COLLPASE'
 MASKING_SUBDIR = 'SMEARGLE_MASKS'
 FILTERING_SUBDIR = 'SMEARGLE_FILTERS'
 
