Feature: A batch script function for doing many analysis functions; script analyzing analysis files is skipped now.

--- a/ifa_smeargle/core/configuration_files/analysis_configuration.ini
+++ b/ifa_smeargle/core/configuration_files/analysis_configuration.ini
@@ -2,6 +2,11 @@
 # reformatting.
 data_directory = ''
 
+# If this flag is set, subsequent analysis functions will not 
+# fail. Instead, the analyzed data is appended to the header. The 
+# mask and filter is not changed.
+append = True
+
 # The mask fits file, if a mask should be applied before. It should
 # only be a single file. This entry should be the path to the file.
 # If the input is invalid, no masking is done.
