Feature/Cross: Added the iterative feature for the sigma clipping. Bug: Fixed robust mean and std calculations being always equal.

--- a/ifa_smeargle/core/configuration_files/masking_configuration.ini
+++ b/ifa_smeargle/core/configuration_files/masking_configuration.ini
@@ -57,9 +57,11 @@ filter_tag_name = ''
 [filter]
     # This filter calculates the mean and standard deviation of the 
     # data. If run, it will filter out all values `sigma_multiple` 
-    # times outside the standard deviation of the mean.
+    # times outside the standard deviation of the mean. This process
+    # is repeated `sigma_iterations` times.
     run_filter_sigma_value = False
     sigma_multiple = 0
+    sigma_iterations = 1
 
     # This filter filters out the highest `top_percent` percent and 
     # lowest `bottom_percent` percent of all values based on their 
